vbnc/vbnc/tests/Errors/30443.vb
Public Class Test

    Public ReadOnly Property MultipleGets As String
        Get
            Return ""
        End Get
        Get
            Return ""
        End Get
    End Property

End Class
